--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
 (Steve Paul Jobs; San Francisco, 1955 - Palo Alto, California, 2011) Informático y empresario estadounidense. Padre del primer ordenador personal y fundador de Apple Computer, probablemente la empresa más innovadora del sector, este mago de la informática fue uno de los más influyentes de la vertiginosa escalada tecnológica en que aún vive el mundo actual, contribuyendo decisivamente a la popularización de la informática. Sus ideas visionarias en el campo de los ordenadores personales, la música digital o la telefonía móvil revolucionaron los mercados y los hábitos de millones de personas durante más de tres décadas. </string>
 
     <string name="boton_envio">Enviar Comentario</string>
+    <string name="boton_guardar">Guardar datos</string>
 
     <string name="nombre">Nombre</string>
     <string name="email">E-mail</string>
