--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
 
     <string name="app_name">Pentagram</string>
 
-    <string name="mascota1">perro feliz</string>
+    <string name="mascota1">feliz</string>
 
     <string name="textmascota1">perro feliz</string>
     <string name="textmascota2">perro peque</string>
